--- a/src/assets/styles/Home.scss
+++ b/src/assets/styles/Home.scss
@@ -51,6 +51,19 @@
   min-height: 85vh;
   text-align: center;
 
+  @media (max-width: 1250px) {
+    grid-template-columns: 1fr !important;
+
+    .hero-visuals {
+      display: none !important;
+    }
+
+    .hero-left {
+      height: auto;
+      padding: 80px 24px 60px;
+    }
+  }
+
   @media (max-width: 768px) {
     grid-template-columns: 1fr;
     padding: 100px 24px 60px;
@@ -97,17 +110,14 @@
   .hero-visuals {
     max-height: 95vh;
     padding: 100px 40px 60px;
+    position: relative;
+    display: flex;
+    align-items: center;
 
     @media (max-width: 768px) {
       order: 2;
       margin-top: 20px;
     }
-  }
-
-  .hero-visuals {
-    position: relative;
-    display: flex;
-    align-items: center;
   }
 
   .hero-visuals img {
@@ -130,11 +140,13 @@
     --rotation-multiplier: 0;
     z-index: 2;
   }
+
   .hero-visuals img:nth-child(2) {
     animation-delay: 0.3s;
     --rotation-multiplier: 5;
     z-index: 1;
   }
+
   .hero-visuals img:nth-child(3) {
     animation-delay: 0.6s;
     --rotation-multiplier: 10;
@@ -147,11 +159,13 @@
     }
     100% {
       opacity: 1;
-      transform: translateX(0) rotate(calc(3deg * var(--rotation-multiplier))) scale(1);
+      transform: translateX(0)
+        rotate(calc(3deg * var(--rotation-multiplier)))
+        scale(1);
     }
   }
-
 }
+
 
 /* ========== DOWNLOAD BUTTONS ========== */
 .download-buttons {
